Fix T85379: Cube projection size parameter is wrong

The input size was doubled & inverted.